# vibe_photos_v2

./: .env.example  .gitignore  ALL_ISSUES_RESOLVED.md  CATEGORIES_TAGS_ENHANCEMENT.md  CLEANUP_COMPLETE.md  CODE_REVIEW.md  COMPLETE.md  DATABASE_POOL_FIX.md  DEPLOYMENT_ON_X86.md  DEPLOY_NOW.md  DETR_IMPLEMENTATION.md  EVERYTHING_WORKS.md  FINAL_STATUS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INSIGHTFACE_FIX.md  ONNX_CUDA13_INFO.md  PDQ_HASH_FIX.md  PHOTOTAG_IMPLEMENTATION_COMPLETE.md  PROJECT_STRUCTURE.md  QUICKSTART.md  QUICK_START.md  README.md  README_FIRST.md  SIMPLIFIED.md  START_HERE.md  SYSTEM_STATUS.md  WEBAPP_FIX.md  WORKFLOW_VERIFIED.md  docker-compose.yml  pyproject.toml  requirements.txt
.cursor/: worktrees.json
.cursor/plans/: ai-photo-management-a7cf2fa9.plan.md
config/: __init__.py  settings.py
docs/: TROUBLESHOOTING_RAM_MODEL.md  references_design_plan_v1.md
models/: __init__.py  database.py  schemas.py
scripts/: __init__.py  check_status.py  download_models.py  fix_pdq_hashes.py  process_photos.py  seed_categories.py  setup_database.py  test_phototag_implementation.py  test_webapp.py  test_workflow.py  update_tag_category_mappings.py  validate_system.py
services/: __init__.py  search_service.py
tests/: test_object_filtering.py  test_ocr_language.py
utils/: __init__.py  db.py  image_utils.py
webapp/: app.py
webapp/templates/: base.html  categories.html  category_detail.html  error.html  index.html  photo_detail.html  search.html  tag_detail.html  tags.html
workers/: __init__.py  ai_models.py  celery_app.py  object_filtering.py  tasks.py
